cached data stitching

--- a/particle_filtering_visualization.ipynb
+++ b/particle_filtering_visualization.ipynb
@@ -489,40 +489,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "np.save(\"raycasting_distances\", a)"
+    "data_00_10 = np.load('data_0_10.dat.npy')\n",
+    "data_10_20 = np.load('data_10_20.dat.npy')\n",
+    "data_20_30 = np.load('data_20_30.dat.npy')\n",
+    "data_30_40 = np.load('data_30_40.dat.npy')\n",
+    "raycasting_distances = np.concatenate([data_00_10[0:10],data_10_20[10:20],data_20_30[20:30],data_30_40[30:40]])\n",
+    "np.save(\"raycasting_distances\", raycasting_distances)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0]], dtype=uint8)"
+       "1331200"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.empty((5,5)).astype(np.uint8)"
+    "raycasting_distances.nbytes"
    ]
   },
   {
@@ -532,16 +532,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "(320/8)*(520/8)*"
+   ]
   }
  ],
  "metadata": {
