cached distance implemented

--- a/particle_filtering_visualization.ipynb
+++ b/particle_filtering_visualization.ipynb
@@ -527,13 +527,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1331200"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(320/8)*(520/8)*"
+    "(320/8)*(520/8)*256*2"
    ]
   }
  ],
