--- a/particle_filtering_visualization.ipynb
+++ b/particle_filtering_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
     "    \n",
     "    x, y, o = particles.get_position_by_weight(position_confidence=False)\n",
     "    ax.quiver(x, y, np.sin(o), np.cos(o), color='r', pivot='mid')\n",
-    "    ax.quiver(robot.location()[0], robot.location()[1], \n",
+    "    ax.quiver(robot.location[0], robot.location[1], \n",
     "              np.sin(robot.orientation), np.cos(robot.orientation), \n",
     "              color='b', pivot='mid')\n",
     "\n",
@@ -92,29 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-457-7b680aa2900d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfigure\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparticles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrobot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-277-b583178327e6>\u001b[0m in \u001b[0;36mplot\u001b[0;34m(particles, robot)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparticles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_position_by_weight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mposition_confidence\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquiver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpivot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'mid'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m     ax.quiver(robot.location()[0], robot.location()[1], \n\u001b[0m\u001b[1;32m     46\u001b[0m               \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrobot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morientation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrobot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0morientation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m               color='b', pivot='mid')\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
-     ]
-    },
-    {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQMAAAGKCAYAAAAIbiTbAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEi5JREFUeJzt3X+s3XV9x/Hni1ZEVFarS/k5aSJMm7iUGRszZR6zWME4\nYIkCmi2NEv9hTpNFR+sf9vqXQLLMJcZtiUg6NmsaDYgzkxbCCfqHEGYrhdpBDU0sk4sYJBBipPa9\nP86ncL297Tm051d7no+k6fd+z/ecz/t+7j2v8/5+7/ecb6oKSTpt0gVImg6GgSTAMJDUGAaSAMNA\nUmMYSAJg+SQGTeLfM6UJqaostX5inUFVTcW/zZs3T7yGU7kW6P2bhlqmaV4mUUfvZ3F07iZIAgwD\nSc3Mh0Gn05l0CS+xlqVZy5FGUUd6+xLjlaQmMa7GL+1QlT/uyev9LEJN2wFESdPFMJAEGAaSGsNA\nEmAYSGoMA0mAYSCpGSgMkuxP8lCSnUkeaOtWJtmR5NEk25OsWLD9piSPJdmbZP2oipc0PIN2BgV0\nquqSqlrX1m0EdlTVxcA97WuSrAGuAdYAlwFfTWIHIk25V/IkXXzW0hXAlra8BbiqLV8JbK2qF6tq\nP7APWIekqfZKOoO7kzyY5JNt3aqqmm/L88CqtnwucGDBfQ8A551wpZJGatAPN3l3Vf0iyR8CO5Ls\nXXhjVVWfDyw54ra5ubmXljudztS8AUQ6lXS7Xbrd7kDbvuI3KiXZDDwPfJLecYQnk5wD3FtVb02y\nEaCqbmzbfx/YXFX3L3gM36g0I3yj0vQ44TcqJTkzyevb8muB9cBu4E5gQ9tsA3BHW74TuDbJ6UlW\nAxcBD5zINyFp9AbZTVgF3J5erCwH/rOqtid5ENiW5DpgP3A1QFXtSbIN2AMcBK63DZCmn59noJFy\nN2F6+HkGkgZiGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAw\nkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTA\nMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAWD7pAk5GyXAep2o4jyMNg2GgoYWb\nTm6GwQk43ld2n3yaRoaB3F0R4AFESY1hIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAM\nJDWGgSTANyqdEN99qFOJnYEkwM7guPiWX52K7AwkAQOGQZJlSXYm+W77emWSHUkeTbI9yYoF225K\n8liSvUnWj6pwScM1aGfwGWAPcLhB3gjsqKqLgXva1yRZA1wDrAEuA76axO5DOgn0faImOR/4IPA1\n4PDx8yuALW15C3BVW74S2FpVL1bVfmAfsG6YBUsajUFetf8J+BxwaMG6VVU135bngVVt+VzgwILt\nDgDnnWiRkkbvmGGQ5EPAU1W1k5e7gt9TVcXLuw9LbnL85Ukal35/Wvwz4IokHwTOAM5Kchswn+Ts\nqnoyyTnAU237J4ALFtz//LbuCHNzcy8tdzodOp3OcX0Dko6u2+3S7XYH2jY14B/Nk7wX+GxV/WWS\nm4FfVdVNSTYCK6pqYzuA+A16xwnOA+4G3lKLBkmyeJWkEeudMRuqasku/5WedHT4GXwjsC3JdcB+\n4GqAqtqTZBu9vzwcBK73WS+dHAbuDIY6qJ2BNHbD7gykmTJLb0bzhCBJgJ2BdEyn0t5svy7HzkAS\nYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGGgaTGMJAEGAaSGsNA\nEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrD\nQBJgGEhqlk+6gFmUjGecqvGMo1ODnYEkwM5gonzl1jSxM5AEGAaSGsNAEmAYSGoMA0mAYSCpMQwk\nAYaBpMYwkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJQJ8wSHJG\nkvuT7EqyJ8mX2vqVSXYkeTTJ9iQrFtxnU5LHkuxNsn7U34Ck4Uj1+bzuJGdW1QtJlgM/BD4LXAE8\nXVU3J7kBeENVbUyyBvgG8E7gPOBu4OKqOrToMavfuKeywxdRmeEp0AT0fu9CVS15GZ++uwlV9UJb\nPB1YBjxDLwy2tPVbgKva8pXA1qp6sar2A/uAdcdbvKTx6RsGSU5LsguYB+6tqkeAVVU13zaZB1a1\n5XOBAwvufoBehyBpyvW9olJr8dcm+QPgriTvW3R7JTlWw2szLJ0EBr68WlU9m+R7wDuA+SRnV9WT\nSc4BnmqbPQFcsOBu57d1R5ibm3tpudPp0Ol0Xlnlkvrqdrt0u92Btj3mAcQkbwIOVtWvk7wGuAv4\nIvAB4FdVdVOSjcCKRQcQ1/HyAcS3LD5a6AHE3v8zPAWagH4HEPt1BucAW5KcRu/4wm1VdU+SncC2\nJNcB+4GrAapqT5JtwB7gIHD9TD/rpZNI3z8tjmTQpDyUYGeg8TrhPy1Kmg0DH0AcNl8VpeliZyAJ\nMAwkNYaBJMAwkNQYBpIAw0BSYxhIAiZ4noEmJ0uefzZanlcy/ewMJAF2BjNtHK/Wk+hCdHzsDCQB\nhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGGgaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwk\nAYaBpMaPPZthfiSZFrIzkATYGcwkP7ZcS7EzkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQ\nBBgGkhpPR9ZM8E1Z/dkZSALsDDRjZvlNWv26IzsDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhq\nDANJgGEgqTEMJAGGgaTGMJAEGAaSGsNAEjBAGCS5IMm9SR5J8nCST7f1K5PsSPJoku1JViy4z6Yk\njyXZm2T9KL8BScOR6vNpD0nOBs6uql1JXgf8D3AV8HHg6aq6OckNwBuqamOSNcA3gHcC5wF3AxdX\n1aEFj1n9xpWG6fAHe8zyr11vDkJVLfkxJ307g6p6sqp2teXngZ/Se5JfAWxpm22hFxAAVwJbq+rF\nqtoP7APWncD3IGkMXtExgyQXApcA9wOrqmq+3TQPrGrL5wIHFtztAL3wkDTFBv4MxLaL8G3gM1X1\nXBZ8oFpVVZJjNWBH3DY3N/fScqfTodPpDFqKpAF1u1263e5A2/Y9ZgCQ5FXAfwH/XVVfbuv2Ap2q\nejLJOcC9VfXWJBsBqurGtt33gc1Vdf+Cx/OYgcbKYwZDOGaQXgtwC7DncBA0dwIb2vIG4I4F669N\ncnqS1cBFwAPHV76kcRnkrwnvAe4DHuLldn8TvSf4NuCPgP3A1VX163afzwOfAA7S2624a9Fj2hlo\nrOwM+ncGA+0mDJthoHEzDIawmyBpNhgGkgDDQFJjGEgCDANJjVdh1tTod5VgjZadgSTAzkBTZJbP\nAZgGdgaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEk\nwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaB\nJMAwkNQYBpIAw0BSs3xSAyeTGnk0qiZdgXRi7AwkARPsDHwllaaLnYEkwDCQ1BgGkgDDQFJjGEgC\nDANJjWEgCTAMJDWGgSRggmcgSuM0zPfCnKpnz9oZSALsDDRjTuRV/VR7p+1idgaSAMNAUmMYSAIM\nA0lN3zBI8vUk80l2L1i3MsmOJI8m2Z5kxYLbNiV5LMneJOtHVbik4RqkM7gVuGzRuo3Ajqq6GLin\nfU2SNcA1wJp2n68msfuQTgJ9n6hV9QPgmUWrrwC2tOUtwFVt+Upga1W9WFX7gX3AuuGUKmmUjvdV\ne1VVzbfleWBVWz4XOLBguwPAecc5hqQxOuGTjqqqkhzrVI4lb5ubm3tpudPp0Ol0TrQUSYt0u126\n3e5A26YGOCUryYXAd6vq7e3rvUCnqp5Mcg5wb1W9NclGgKq6sW33fWBzVd2/6PFqkHGlYTl89uAw\nzkA8WX91e/WHqlryXMrj3U24E9jQljcAdyxYf22S05OsBi4CHjjOMSSNUd/dhCRbgfcCb0ryc+AL\nwI3AtiTXAfuBqwGqak+SbcAe4CBwvS2AdHIYaDdh6IO6mzA1Rv3mm2n5Mbub0H83wXctaqac6u88\nPBGGgYCT99VOw2MYaCYYdv15qrAkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaS\nAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDAA4Ikn\nnuB3v/vdpMuQJmqmw+Bfv/IVPnzGGXzuzW9m9+7dky5HmqiZu9bis88+y6c+9CEu+uEP+QRwOfAn\nwB9/5zusXbt2wtVJk5OawBUpk9S4x/3e7bfzzY99jL/+zW94P72W6BDQAX4ATGIepsHhS5TP6Lc/\nU3o/61BVS16YfiY6g7/5yEdY/61vcdui9TfRC4Kf/exnE6hKmi4z0RksW7aMiw4dYgdwQVv3Y+Bd\nwLsuvZT77rtvbLVMGzuD2dGvM5iJMPjoq1/Nv/32t7wWeBi4GPhTYC+zu3twmGEwO2Z6N+GF557j\nn886i63AL4GrgDcAZ2MQSIud0mGw9qyz2AU8AHwY+DlwJvAC8PTTT0+yNGnqnNJh8BjwF8BO4OCy\nZdTBg6xevZpOp8Mb3/jGCVcnTZdT+qSj66+/nh8BN3zhCxw8eBCAxx9/nFtvvXWyhUlTaCYOIOro\nPIA4O/odQDylOwNJgzMMJAGGgaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIa\nw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBIwoDJJclmRvkseS3DCKMSQN19DDIMky4CvAZcAa4KNJ\n3jbscYal2+1OuoSXWMvSrOVIo6hjFJ3BOmBfVe2vqheBbwJXjmCcoZiWHy5Yy9FYy5FOljA4j96V\nzA470NZJmmKjuLzaQJfjyJKXcZiML35x0hW8bFK1LPXzcF6WNi21DLuOoV9RKcm7gLmquqx9vQk4\nVFU3LdjG6/dIE3K0KyqNIgyWA/9L75qn/0fvIsgfraqfDnUgSUM19N2EqjqY5FPAXcAy4BaDQJp+\nE7nwqqTpM/YzECd5QlKS/UkeSrIzyQNt3cokO5I8mmR7khUjGvvrSeaT7F6w7qhjJ9nU5mhvkvVj\nqGUuyYE2NzuTXD6mWi5Icm+SR5I8nOTTbf3Y5+YYtYx9bpKckeT+JLuS7EnypbZ+dPNSVWP7R2+3\nYR9wIfAqYBfwtjGO/ziwctG6m4F/aMs3ADeOaOxLgUuA3f3Gpney1q42Rxe2OTttxLVsBv5+iW1H\nXcvZwNq2/Dp6x5veNom5OUYtk5qbM9v/y4EfAe8Z5byMuzOYhhOSFh9JvQLY0pa3AFeNYtCq+gHw\nzIBjXwlsraoXq2o/vR/suhHXAkfOzThqebKqdrXl54Gf0jsvZexzc4xaYDJz80JbPJ3eC+kzjHBe\nxh0Gkz4hqYC7kzyY5JNt3aqqmm/L88CqMdZztLHPpTc3h41rnv4uyU+S3LKg/RxbLUkupNex3M+E\n52ZBLT9qq8Y+N0lOS7KL3vd/b1U9wgjnZdxhMOmjle+uqkuAy4G/TXLpwhur129NpMYBxh51Xf8C\nrAbWAr8A/nGctSR5HfBt4DNV9dzvDTbmuWm1fKvV8jwTmpuqOlRVa4HzgT9P8r5Ftw91XsYdBk8A\nFyz4+gJ+P81Gqqp+0f7/JXA7vTZqPsnZAEnOAZ4aVz3HGHvxPJ3f1o1MVT1VDfA1Xm4xR15LklfR\nC4LbquqOtnoic7Oglv84XMsk56aN/yzwPeAdjHBexh0GDwIXJbkwyenANcCd4xg4yZlJXt+WXwus\nB3a38Te0zTYAdyz9CCNxtLHvBK5NcnqS1cBF9E7eGpn2i3XYX9Gbm5HXkiTALcCeqvrygpvGPjdH\nq2USc5PkTYd3R5K8Bng/sJNRzsuwjny+giOkl9M7SrsP2DTGcVfTO9q6C3j48NjASuBu4FFgO7Bi\nRONvpXdG5m/pHTf5+LHGBj7f5mgv8IER1/IJ4N+Bh4CftF+wVWOq5T3AofZz2dn+XTaJuTlKLZdP\nYm6AtwM/brU8BHyu3+/ridbiSUeSAD/2TFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaSAPh/2ExS\nGn0Mb4YAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQMAAAGKCAYAAAAIbiTbAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEnNJREFUeJzt3X+s3XV9x/Hnq5QKKFutLi3QLpAJ0SZGiLExCuMQFQph\nLYsJYGZClPiHbNNk0dGaOK5/iSTL/GNx/4Cmc7OmcYPhzIRCOBnECMG1gtQOalZDmVymQZFgYmvf\n++N8Wg6X297T3vPj3t7nI7m53/s933M+7/u597zO+/u93++5qSokadmkC5C0MBgGkgDDQFJjGEgC\nDANJjWEgCYDlkxg0iX/PlCakqjLb+ol1BlW1ID5uu+22iddwKtcCvY+FUMtCmpdJ1NH7WRybuwmS\nAMNAUrPkw6DT6Uy6hKOsZXbW8nqjqCO9fYnxSlKTGFfjl3aoyh/35PV+FqEW2gFESQuLYSAJMAwk\nNYaBJMAwkNQYBpIAw0BSM1AYJNmf5Ikku5I81tatSrIzydNJ7k+ysm/7rUmeSbI3yZWjKl7S8Aza\nGRTQqapLqmpDW7cF2FlVFwEPtq9Jsh64AVgPbAS+ksQORFrgTuRJOvOspU3Atra8DbiuLW8GtlfV\nwaraD+wDNiBpQTuRzuCBJI8n+URbt7qqptvyNLC6LZ8LHOi77wHgvHlXKmmkBn1zk/dX1c+S/AGw\nM8ne/hurquZ4w5LX3TY1NXV0udPpLJgLQKRTSbfbpdvtDrTtCV+olOQ24GXgE/SOIzyf5Bzgoap6\ne5ItAFV1e9v+u8BtVfVo32N4odIS4YVKC8e8L1RKclaSs9vyG4ErgSeBe4Gb2mY3Afe05XuBG5Os\nSHIBcCHw2Hy+CUmjN8huwmrg7vRiZTnwz1V1f5LHgR1Jbgb2A9cDVNWeJDuAPcAh4BbbAGnh8/0M\nNFLuJiwcvp+BpIEYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEg\nCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1h\nIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSQAlk+6gMUoGc7jVA3ncaRhMAw0\ntHDT4mYYzMPJvrL75NNCZBjI3RUBHkCU1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaS\nAMNAUmMYSAK8UGlevPpQpxI7A0mAncFJ8ZJfnYrsDCQBA4ZBktOS7Ery7fb1qiQ7kzyd5P4kK/u2\n3ZrkmSR7k1w5qsIlDdegncGngT3AkQZ5C7Czqi4CHmxfk2Q9cAOwHtgIfCWJ3Ye0CMz5RE2yFrgG\nuBM4cvx8E7CtLW8DrmvLm4HtVXWwqvYD+4ANwyxY0mgM8qr9d8BngcN961ZX1XRbngZWt+VzgQN9\n2x0AzptvkZJG77hhkORa4IWq2sWrXcFrVFXx6u7DrJucfHmSxmWuPy2+D9iU5BrgDOD3knwdmE6y\npqqeT3IO8ELb/jlgXd/917Z1rzM1NXV0udPp0Ol0TuobkHRs3W6Xbrc70LapAf9onuRy4DNV9SdJ\n7gB+UVVfSrIFWFlVW9oBxG/QO05wHvAA8LaaMUiSmaskjVjvjNlQVbN2+Sd60tGRZ/DtwI4kNwP7\ngesBqmpPkh30/vJwCLjFZ720OAzcGQx1UDsDaeyG3RlIS8pSuhjNE4IkAXYG0nGdSnuzc3U5dgaS\nAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgG\nkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQY\nBpIAw0BSs3zSBSxFyXjGqRrPODo12BlIAuwMJspXbi0kdgaSAMNAUmMYSAIMA0mNYSAJMAwkNYaB\nJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCZgjDJKc\nkeTRJLuT7EnyxbZ+VZKdSZ5Ocn+SlX332ZrkmSR7k1w56m9A0nCk5ni/7iRnVdUrSZYDjwCfATYB\nP6+qO5LcCry5qrYkWQ98A3gPcB7wAHBRVR2e8Zg117insiP/RGUJT4EmoPd7F6pq1n/jM+duQlW9\n0hZXAKcBL9ILg21t/Tbgura8GdheVQeraj+wD9hwssVLGp85wyDJsiS7gWngoap6ClhdVdNtk2lg\ndVs+FzjQd/cD9DoESQvcnP9RqbX4Fyf5feC+JFfMuL2SHK/htRmWFoGB/71aVf0qyXeAdwPTSdZU\n1fNJzgFeaJs9B6zru9vatu51pqamji53Oh06nc6JVS5pTt1ul263O9C2xz2AmOStwKGq+mWSM4H7\ngC8AVwG/qKovJdkCrJxxAHEDrx5AfNvMo4UeQOx9XsJToAmY6wDiXJ3BOcC2JMvoHV/4elU9mGQX\nsCPJzcB+4HqAqtqTZAewBzgE3LKkn/XSIjLnnxZHMmhSHkqwM9B4zftPi5KWhoEPIA6br4rSwmJn\nIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCJniegSYns55/NlqeV7Lw2RlIAuwMlrRxvFpPogvRybEz\nkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGGgaTG\nMJAEGAaSGt/2bAnzLcnUz85AEmBnsCT5tuWajZ2BJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1\nhoEkwDCQ1Hg6spYEL8qam52BJMDOQEvMUr5Ia67uyM5AEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQY\nBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBAwQBknWJXkoyVNJfpTkU239qiQ7kzyd5P4kK/vu\nszXJM0n2JrlylN+ApOFIzfFuD0nWAGuqaneSNwE/AK4DPgb8vKruSHIr8Oaq2pJkPfAN4D3AecAD\nwEVVdbjvMWuucaVhOvLGHkv51643B6GqZn2bkzk7g6p6vqp2t+WXgR/Te5JvAra1zbbRCwiAzcD2\nqjpYVfuBfcCGeXwPksbghI4ZJDkfuAR4FFhdVdPtpmlgdVs+FzjQd7cD9MJD0gI28Hsgtl2EfwE+\nXVW/Tt8bqlVVJTleA/a626ampo4udzodOp3OoKVIGlC326Xb7Q607ZzHDACSnA78O/AfVfXltm4v\n0Kmq55OcAzxUVW9PsgWgqm5v230XuK2qHu17PI8ZaKw8ZjCEYwbptQB3AXuOBEFzL3BTW74JuKdv\n/Y1JViS5ALgQeOzkypc0LoP8NeFS4D+BJ3i13d9K7wm+A/hDYD9wfVX9st3nc8DHgUP0divum/GY\ndgYaKzuDuTuDgXYThs0w0LgZBkPYTZC0NBgGkgDDQFJjGEgCDANJjf+FWQvGXP8lWKNlZyAJsDPQ\nArKUzwFYCOwMJAGGgaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhI\nagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGGgaTGMJAEGAaSGsNAEmAY\nSGoMA0mAYSCpMQwkAYaBpGb5pAZOJjXyaFRNugJpfuwMJAET7Ax8JZUWFjsDSYBhIKkxDCQBhoGk\nxjCQBBgGkhrDQBJgGEhqDANJwATPQJTGaZjXwpyqZ8/aGUgC7Ay0xMznVf1Uu9J2JjsDSYBhIKkx\nDCQBhoGkZs4wSPLVJNNJnuxbtyrJziRPJ7k/ycq+27YmeSbJ3iRXjqpwScM1SGfwNWDjjHVbgJ1V\ndRHwYPuaJOuBG4D17T5fSWL3IS0Ccz5Rq+ph4MUZqzcB29ryNuC6trwZ2F5VB6tqP7AP2DCcUiWN\n0sm+aq+uqum2PA2sbsvnAgf6tjsAnHeSY0gao3mfdFRVleR4p3LMetvU1NTR5U6nQ6fTmW8pkmbo\ndrt0u92Btk0NcEpWkvOBb1fVO9vXe4FOVT2f5Bzgoap6e5ItAFV1e9vuu8BtVfXojMerQcaVhuXI\n2YPDOANxsf7q9uoPVTXruZQnu5twL3BTW74JuKdv/Y1JViS5ALgQeOwkx5A0RnPuJiTZDlwOvDXJ\ns8DfALcDO5LcDOwHrgeoqj1JdgB7gEPALbYA0uIw0G7C0Ad1N2HBGPXFNwvlx+xuwty7CV61qCXl\nVL/ycD4MAwGL99VOw2MYaEkw7ObmqcKSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBgP64Ac/\nyJo1a3jkkUcmXYo0El6oNJdDh7j+9NO5D3ipb/W3vvUtPvzhD0+qqqFZ7BffaHBzXahkGAzgawl/\nBjwA/Cvwb8DPgWeffZa1a9dOtLb5MgyWjlG9ucmpa/duOPtsWLUKVq+GtWu5FlgBXAPcCTwP7Fu3\njrV33w0HDhz34aTFwguVZjrzTHjve+HgwaMfqwCee+7oJqcBf7RsGTz1FKxbB2vWwHKnUoubuwmD\nuOYa6HY5fPnlLLv6arjqKrjoolPi4nh3E5YOjxnM1yuvwPe+B5deCmecMelqhs4wWDoMAx2XYbB0\neABR0kAMgxP00kvw8MPw299OuhJpuNxNOEFV0OnAD34Al10GH/hA7+Nd74JlizBa3U1YOjxmME8/\n+Ql8/vPwm9+8+vHTn/Y++r3lLXDFFXDttfDRj8Jpp02m3hNlGCwdvlX6PL30Emzf3ls+88zex+HD\nr91mxQp43/vguutg06bFEwRSPzuDOfzud71zj97whldfRT/5SbjzTvjQh+CGG2DzZli5crJ1niw7\ng6XD3YQhO3wYvvlN2Lixd8byYmcYLB2GgY7LMFg6PM9A0kAMA0mAYSCpMQwkAYaBpMYwkAQYBpIa\nw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGGgaTGMJAEGAaS\nGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhIakYSBkk2Jtmb5Jkkt45iDEnDNfQw\nSHIa8PfARmA98JEk7xj2OMPS7XYnXcJR1jI7a3m9UdQxis5gA7CvqvZX1UHgm8DmEYwzFAvlhwvW\ncizW8nqLJQzOA57t+/pAWydpAVs+gsesQTZKRjDySfrCFyZdwasmVctsPw/nZXYLpZZh15GqgZ67\ngz9g8l5gqqo2tq+3Aoer6kt92wx3UEkDq6pZX4pHEQbLgf8GPgD8L/AY8JGq+vFQB5I0VEPfTaiq\nQ0n+ArgPOA24yyCQFr6hdwaSFqexn4E4yROSkuxP8kSSXUkea+tWJdmZ5Okk9ydZOaKxv5pkOsmT\nfeuOOXaSrW2O9ia5cgy1TCU50OZmV5Krx1TLuiQPJXkqyY+SfKqtH/vcHKeWsc9NkjOSPJpkd5I9\nSb7Y1o9uXqpqbB/0dhv2AecDpwO7gXeMcfz/AVbNWHcH8Ndt+Vbg9hGNfRlwCfDkXGPTO1lrd5uj\n89ucLRtxLbcBfzXLtqOuZQ1wcVt+E73jTe+YxNwcp5ZJzc1Z7fNy4PvApaOcl3F3BgvhhKSZR1I3\nAdva8jbgulEMWlUPAy8OOPZmYHtVHayq/fR+sBtGXAu8fm7GUcvzVbW7Lb8M/JjeeSljn5vj1AKT\nmZtX2uIKei+kLzLCeRl3GEz6hKQCHkjyeJJPtHWrq2q6LU8Dq8dYz7HGPpfe3Bwxrnn6yyQ/THJX\nX/s5tlqSnE+vY3mUCc9NXy3fb6vGPjdJliXZTe/7f6iqnmKE8zLuMJj00cr3V9UlwNXAnye5rP/G\n6vVbE6lxgLFHXdc/ABcAFwM/A/52nLUkeRPwL8Cnq+rXrxlszHPTavlWq+VlJjQ3VXW4qi4G1gJ/\nnOSKGbcPdV7GHQbPAev6vl7Ha9NspKrqZ+3z/wF302ujppOsAUhyDvDCuOo5ztgz52ltWzcyVfVC\nNcCdvNpijryWJKfTC4KvV9U9bfVE5qavln86Ussk56aN/yvgO8C7GeG8jDsMHgcuTHJ+khXADcC9\n4xg4yVlJzm7LbwSuBJ5s49/UNrsJuGf2RxiJY419L3BjkhVJLgAupHfy1si0X6wj/pTe3Iy8liQB\n7gL2VNWX+24a+9wcq5ZJzE2Stx7ZHUlyJvAhYBejnJdhHfk8gSOkV9M7SrsP2DrGcS+gd7R1N/Cj\nI2MDq4AHgKeB+4GVIxp/O70zMn9L77jJx443NvC5Nkd7gatGXMvHgX8EngB+2H7BVo+plkuBw+3n\nsqt9bJzE3ByjlqsnMTfAO4H/arU8AXx2rt/X+dbiSUeSAN/2TFJjGEgCDANJjWEgCTAMJDWGgSTA\nMJDUGAaSAPh/LsudBoJDXMgAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10ae2c550>"
+       "<matplotlib.figure.Figure at 0x10c515750>"
       ]
      },
      "metadata": {},
@@ -128,20 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "reload(state.particle_filtering)\n",
-    "particles = state.particle_filtering.Particles(n=100, where='1base')\n",
+    "particles = state.particle_filtering.Particles(n=1000, where='1base')\n",
     "robot = state.particle_filtering.Robot(20, 30, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -161,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -169,25 +157,39 @@
     {
      "data": {
       "text/plain": [
-       "[x=20 y=30 orient=0.00000]"
+       "{'IR_front': 243, 'IR_right': 66}"
       ]
      },
-     "execution_count": 449,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "robot"
+    "robot.measurement_prediction()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 117,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[66 72]\n",
+      " [67 72]\n",
+      " [67 72]\n",
+      " ..., \n",
+      " [67 72]\n",
+      " [67 74]\n",
+      " [66 74]]\n"
+     ]
+    }
+   ],
    "source": [
     "particles.resample()"
    ]
