--- a/particle_filtering_visualization.ipynb
+++ b/particle_filtering_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,8 @@
     "from state.map import X_MAX, Y_MAX, ARENA_WALLS \n",
     "from math import sqrt\n",
     "from math import pi\n",
-    "import state.particle_filtering"
+    "import state.particle_filtering\n",
+    "import numpy as np"
    ]
   },
   {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -100,9 +101,9 @@
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQMAAAGKCAYAAAAIbiTbAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEnNJREFUeJzt3X+s3XV9x/Hnq5QKKFutLi3QLpAJ0SZGiLExCuMQFQph\nLYsJYGZClPiHbNNk0dGaOK5/iSTL/GNx/4Cmc7OmcYPhzIRCOBnECMG1gtQOalZDmVymQZFgYmvf\n++N8Wg6X297T3vPj3t7nI7m53/s933M+7/u597zO+/u93++5qSokadmkC5C0MBgGkgDDQFJjGEgC\nDANJjWEgCYDlkxg0iX/PlCakqjLb+ol1BlW1ID5uu+22iddwKtcCvY+FUMtCmpdJ1NH7WRybuwmS\nAMNAUrPkw6DT6Uy6hKOsZXbW8nqjqCO9fYnxSlKTGFfjl3aoyh/35PV+FqEW2gFESQuLYSAJMAwk\nNYaBJMAwkNQYBpIAw0BSM1AYJNmf5Ikku5I81tatSrIzydNJ7k+ysm/7rUmeSbI3yZWjKl7S8Aza\nGRTQqapLqmpDW7cF2FlVFwEPtq9Jsh64AVgPbAS+ksQORFrgTuRJOvOspU3Atra8DbiuLW8GtlfV\nwaraD+wDNiBpQTuRzuCBJI8n+URbt7qqptvyNLC6LZ8LHOi77wHgvHlXKmmkBn1zk/dX1c+S/AGw\nM8ne/hurquZ4w5LX3TY1NXV0udPpLJgLQKRTSbfbpdvtDrTtCV+olOQ24GXgE/SOIzyf5Bzgoap6\ne5ItAFV1e9v+u8BtVfVo32N4odIS4YVKC8e8L1RKclaSs9vyG4ErgSeBe4Gb2mY3Afe05XuBG5Os\nSHIBcCHw2Hy+CUmjN8huwmrg7vRiZTnwz1V1f5LHgR1Jbgb2A9cDVNWeJDuAPcAh4BbbAGnh8/0M\nNFLuJiwcvp+BpIEYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEg\nCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1h\nIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSQAlk+6gMUoGc7jVA3ncaRhMAw0\ntHDT4mYYzMPJvrL75NNCZBjI3RUBHkCU1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaS\nAMNAUmMYSAK8UGlevPpQpxI7A0mAncFJ8ZJfnYrsDCQBA4ZBktOS7Ery7fb1qiQ7kzyd5P4kK/u2\n3ZrkmSR7k1w5qsIlDdegncGngT3AkQZ5C7Czqi4CHmxfk2Q9cAOwHtgIfCWJ3Ye0CMz5RE2yFrgG\nuBM4cvx8E7CtLW8DrmvLm4HtVXWwqvYD+4ANwyxY0mgM8qr9d8BngcN961ZX1XRbngZWt+VzgQN9\n2x0AzptvkZJG77hhkORa4IWq2sWrXcFrVFXx6u7DrJucfHmSxmWuPy2+D9iU5BrgDOD3knwdmE6y\npqqeT3IO8ELb/jlgXd/917Z1rzM1NXV0udPp0Ol0TuobkHRs3W6Xbrc70LapAf9onuRy4DNV9SdJ\n7gB+UVVfSrIFWFlVW9oBxG/QO05wHvAA8LaaMUiSmaskjVjvjNlQVbN2+Sd60tGRZ/DtwI4kNwP7\ngesBqmpPkh30/vJwCLjFZ720OAzcGQx1UDsDaeyG3RlIS8pSuhjNE4IkAXYG0nGdSnuzc3U5dgaS\nAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgG\nkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQY\nBpIAw0BSs3zSBSxFyXjGqRrPODo12BlIAuwMJspXbi0kdgaSAMNAUmMYSAIMA0mNYSAJMAwkNYaB\nJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCZgjDJKc\nkeTRJLuT7EnyxbZ+VZKdSZ5Ocn+SlX332ZrkmSR7k1w56m9A0nCk5ni/7iRnVdUrSZYDjwCfATYB\nP6+qO5LcCry5qrYkWQ98A3gPcB7wAHBRVR2e8Zg117insiP/RGUJT4EmoPd7F6pq1n/jM+duQlW9\n0hZXAKcBL9ILg21t/Tbgura8GdheVQeraj+wD9hwssVLGp85wyDJsiS7gWngoap6ClhdVdNtk2lg\ndVs+FzjQd/cD9DoESQvcnP9RqbX4Fyf5feC+JFfMuL2SHK/htRmWFoGB/71aVf0qyXeAdwPTSdZU\n1fNJzgFeaJs9B6zru9vatu51pqamji53Oh06nc6JVS5pTt1ul263O9C2xz2AmOStwKGq+mWSM4H7\ngC8AVwG/qKovJdkCrJxxAHEDrx5AfNvMo4UeQOx9XsJToAmY6wDiXJ3BOcC2JMvoHV/4elU9mGQX\nsCPJzcB+4HqAqtqTZAewBzgE3LKkn/XSIjLnnxZHMmhSHkqwM9B4zftPi5KWhoEPIA6br4rSwmJn\nIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCJniegSYns55/NlqeV7Lw2RlIAuwMlrRxvFpPogvRybEz\nkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGGgaTG\nMJAEGAaSGt/2bAnzLcnUz85AEmBnsCT5tuWajZ2BJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1\nhoEkwDCQ1Hg6spYEL8qam52BJMDOQEvMUr5Ia67uyM5AEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQY\nBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBAwQBknWJXkoyVNJfpTkU239qiQ7kzyd5P4kK/vu\nszXJM0n2JrlylN+ApOFIzfFuD0nWAGuqaneSNwE/AK4DPgb8vKruSHIr8Oaq2pJkPfAN4D3AecAD\nwEVVdbjvMWuucaVhOvLGHkv51643B6GqZn2bkzk7g6p6vqp2t+WXgR/Te5JvAra1zbbRCwiAzcD2\nqjpYVfuBfcCGeXwPksbghI4ZJDkfuAR4FFhdVdPtpmlgdVs+FzjQd7cD9MJD0gI28Hsgtl2EfwE+\nXVW/Tt8bqlVVJTleA/a626ampo4udzodOp3OoKVIGlC326Xb7Q607ZzHDACSnA78O/AfVfXltm4v\n0Kmq55OcAzxUVW9PsgWgqm5v230XuK2qHu17PI8ZaKw8ZjCEYwbptQB3AXuOBEFzL3BTW74JuKdv\n/Y1JViS5ALgQeOzkypc0LoP8NeFS4D+BJ3i13d9K7wm+A/hDYD9wfVX9st3nc8DHgUP0divum/GY\ndgYaKzuDuTuDgXYThs0w0LgZBkPYTZC0NBgGkgDDQFJjGEgCDANJjf+FWQvGXP8lWKNlZyAJsDPQ\nArKUzwFYCOwMJAGGgaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhI\nagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGGgaTGMJAEGAaSGsNAEmAY\nSGoMA0mAYSCpMQwkAYaBpGb5pAZOJjXyaFRNugJpfuwMJAET7Ax8JZUWFjsDSYBhIKkxDCQBhoGk\nxjCQBBgGkhrDQBJgGEhqDANJwATPQJTGaZjXwpyqZ8/aGUgC7Ay0xMznVf1Uu9J2JjsDSYBhIKkx\nDCQBhoGkZs4wSPLVJNNJnuxbtyrJziRPJ7k/ycq+27YmeSbJ3iRXjqpwScM1SGfwNWDjjHVbgJ1V\ndRHwYPuaJOuBG4D17T5fSWL3IS0Ccz5Rq+ph4MUZqzcB29ryNuC6trwZ2F5VB6tqP7AP2DCcUiWN\n0sm+aq+uqum2PA2sbsvnAgf6tjsAnHeSY0gao3mfdFRVleR4p3LMetvU1NTR5U6nQ6fTmW8pkmbo\ndrt0u92Btk0NcEpWkvOBb1fVO9vXe4FOVT2f5Bzgoap6e5ItAFV1e9vuu8BtVfXojMerQcaVhuXI\n2YPDOANxsf7q9uoPVTXruZQnu5twL3BTW74JuKdv/Y1JViS5ALgQeOwkx5A0RnPuJiTZDlwOvDXJ\ns8DfALcDO5LcDOwHrgeoqj1JdgB7gEPALbYA0uIw0G7C0Ad1N2HBGPXFNwvlx+xuwty7CV61qCXl\nVL/ycD4MAwGL99VOw2MYaEkw7ObmqcKSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBgP64Ac/\nyJo1a3jkkUcmXYo0El6oNJdDh7j+9NO5D3ipb/W3vvUtPvzhD0+qqqFZ7BffaHBzXahkGAzgawl/\nBjwA/Cvwb8DPgWeffZa1a9dOtLb5MgyWjlG9ucmpa/duOPtsWLUKVq+GtWu5FlgBXAPcCTwP7Fu3\njrV33w0HDhz34aTFwguVZjrzTHjve+HgwaMfqwCee+7oJqcBf7RsGTz1FKxbB2vWwHKnUoubuwmD\nuOYa6HY5fPnlLLv6arjqKrjoolPi4nh3E5YOjxnM1yuvwPe+B5deCmecMelqhs4wWDoMAx2XYbB0\neABR0kAMgxP00kvw8MPw299OuhJpuNxNOEFV0OnAD34Al10GH/hA7+Nd74JlizBa3U1YOjxmME8/\n+Ql8/vPwm9+8+vHTn/Y++r3lLXDFFXDttfDRj8Jpp02m3hNlGCwdvlX6PL30Emzf3ls+88zex+HD\nr91mxQp43/vguutg06bFEwRSPzuDOfzud71zj97whldfRT/5SbjzTvjQh+CGG2DzZli5crJ1niw7\ng6XD3YQhO3wYvvlN2Lixd8byYmcYLB2GgY7LMFg6PM9A0kAMA0mAYSCpMQwkAYaBpMYwkAQYBpIa\nw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEgqTEMJAGGgaTGMJAEGAaS\nGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhIakYSBkk2Jtmb5Jkkt45iDEnDNfQw\nSHIa8PfARmA98JEk7xj2OMPS7XYnXcJR1jI7a3m9UdQxis5gA7CvqvZX1UHgm8DmEYwzFAvlhwvW\ncizW8nqLJQzOA57t+/pAWydpAVs+gsesQTZKRjDySfrCFyZdwasmVctsPw/nZXYLpZZh15GqgZ67\ngz9g8l5gqqo2tq+3Aoer6kt92wx3UEkDq6pZX4pHEQbLgf8GPgD8L/AY8JGq+vFQB5I0VEPfTaiq\nQ0n+ArgPOA24yyCQFr6hdwaSFqexn4E4yROSkuxP8kSSXUkea+tWJdmZ5Okk9ydZOaKxv5pkOsmT\nfeuOOXaSrW2O9ia5cgy1TCU50OZmV5Krx1TLuiQPJXkqyY+SfKqtH/vcHKeWsc9NkjOSPJpkd5I9\nSb7Y1o9uXqpqbB/0dhv2AecDpwO7gXeMcfz/AVbNWHcH8Ndt+Vbg9hGNfRlwCfDkXGPTO1lrd5uj\n89ucLRtxLbcBfzXLtqOuZQ1wcVt+E73jTe+YxNwcp5ZJzc1Z7fNy4PvApaOcl3F3BgvhhKSZR1I3\nAdva8jbgulEMWlUPAy8OOPZmYHtVHayq/fR+sBtGXAu8fm7GUcvzVbW7Lb8M/JjeeSljn5vj1AKT\nmZtX2uIKei+kLzLCeRl3GEz6hKQCHkjyeJJPtHWrq2q6LU8Dq8dYz7HGPpfe3Bwxrnn6yyQ/THJX\nX/s5tlqSnE+vY3mUCc9NXy3fb6vGPjdJliXZTe/7f6iqnmKE8zLuMJj00cr3V9UlwNXAnye5rP/G\n6vVbE6lxgLFHXdc/ABcAFwM/A/52nLUkeRPwL8Cnq+rXrxlszHPTavlWq+VlJjQ3VXW4qi4G1gJ/\nnOSKGbcPdV7GHQbPAev6vl7Ha9NspKrqZ+3z/wF302ujppOsAUhyDvDCuOo5ztgz52ltWzcyVfVC\nNcCdvNpijryWJKfTC4KvV9U9bfVE5qavln86Ussk56aN/yvgO8C7GeG8jDsMHgcuTHJ+khXADcC9\n4xg4yVlJzm7LbwSuBJ5s49/UNrsJuGf2RxiJY419L3BjkhVJLgAupHfy1si0X6wj/pTe3Iy8liQB\n7gL2VNWX+24a+9wcq5ZJzE2Stx7ZHUlyJvAhYBejnJdhHfk8gSOkV9M7SrsP2DrGcS+gd7R1N/Cj\nI2MDq4AHgKeB+4GVIxp/O70zMn9L77jJx443NvC5Nkd7gatGXMvHgX8EngB+2H7BVo+plkuBw+3n\nsqt9bJzE3ByjlqsnMTfAO4H/arU8AXx2rt/X+dbiSUeSAN/2TFJjGEgCDANJjWEgCTAMJDWGgSTA\nMJDUGAaSAPh/LsudBoJDXMgAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAQMAAAGKCAYAAAAIbiTbAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEvZJREFUeJzt3WusZWV9x/Hvj6vcLKJmuLaMAsEJKkSdoGLdphFhbIEm\nBvAVUdQX1GrSaJnxRTn2hUUSU0waTIzaTKlOO6mRDvUCA7KtJlyGOgMDwxSITOJQOVRFC5oI4/z7\nYj8DhzNn5uyZsy/n8v0kO7P22mvv5z/POfu3n/XstdZJVSFJh4y7AEnzg2EgCTAMJDWGgSTAMJDU\nGAaSADhsHI0m8ftMaUyqKjOtH9vIoKrmxe26664bew2LuRbo3eZDLfOpX8ZRR+9nsW/uJkgCDANJ\nzZIPg06nM+4SXmQtM7OWvQ2jjvT2JUYrSY2jXY1e2lSVP+7x6/0sQs23CURJ84thIAkwDCQ1hoEk\nwDCQ1BgGkgDDQFLTVxgk2ZHkwSSbk9zX1p2QZGOSR5PcnuT4KduvSfJYku1JLhxW8ZIGp9+RQQGd\nqjqvqla2dauBjVV1FnBnu0+SFcAVwArgIuCmJI5ApHnuQN6k049augRY25bXApe15UuBdVX1QlXt\nAB4HViJpXjuQkcEdSe5P8tG2bllVTbblSWBZWz4Z2DnluTuBU+ZcqaSh6vfiJu+sqp8leS2wMcn2\nqQ9WVc1ywZK9HpuYmHhxudPpzJsTQKTFpNvt0u12+9r2gE9USnId8BzwUXrzCE8lOQm4q6rOTrIa\noKqub9t/D7iuqu6d8hqeqLREeKLS/DHnE5WSHJ3kuLZ8DHAhsBXYAFzVNrsKuKUtbwCuTHJEkuXA\nmcB9c/lPSBq+fnYTlgHfSi9WDgO+XlW3J7kfWJ/kamAHcDlAVW1Lsh7YBuwCrnEYIM1/Xs9AQ+Vu\nwvzh9Qwk9cUwkAQYBpIaw0ASYBhIagwDSYBhIKkxDCQBhoGkxjCQBBgGkhrDQBJgGEhqDANJgGEg\nqTEMJAGGgaTGMJAEGAaSGsNAmoPFdG1Hw0A6CL//PXzhC/CDH/TuV8EDD8DXvz7euubCqyNrqBbj\n1ZG3boWrr4ZNm+Cmm2DzZvjOd+DJJ+Hww+GXv4Rjjx13lXub7erIhoGGajGFwe9+B5/7XO+2a9fL\nHzvzTHj/+2HVKuh0eqEw38wWBv3+rUVpSbv77t5o4JFHXr7+7LNhw4ZeGCx0hoE0i1tvhS9+EV77\nWnj1q2H37pfftmxZHGHgboKGajHtJix0/kUlSX0xDCQBhoGkxjCQBBgGkhrDQBJgGEgHLMmLt7e/\n/e3jLmdgDAPpACQv/4r+2Pl4EsJB8qAjDdViO+hoahgceuih7Jp+ksI85rkJ0gAt5g8xdxMkAYaB\npMYwkAQYBpIaJxAPQmaciz1wi3guSguQYaCBhZsWNncT5qDq4G5aWDZt2sT555/PQw89NO5ShsqD\njg7CXA+kWWwH4iwVr3vd6/jJT34y7jIOmldHHgLDQAuRlz2T1BfDQBJgGEhqDANJgGEgqTEMJAGG\ngaTGMJAEGAaSGsNAEmAYSGo8hXkOPPVXi4kjA0mAI4OD4tmGWowcGUgC+gyDJIcm2Zzk1nb/hCQb\nkzya5PYkx0/Zdk2Sx5JsT3LhsAqXNFj9jgw+CWwD9gyQVwMbq+os4M52nyQrgCuAFcBFwE1JHH1I\nC8Csb9QkpwKrgK8Ae+bPLwHWtuW1wGVt+VJgXVW9UFU7gMeBlYMsWNJw9POp/ffAp4HdU9Ytq6rJ\ntjwJLGvLJwM7p2y3EzhlrkVKGr79hkGSPwWerqrNvDQqeJl2McP9za879y4tALN9tfgO4JIkq4BX\nAK9McjMwmeTEqnoqyUnA0237J4HTpjz/1LZuLxMTEy8udzodOp3OQf0HJO1bt9ul2+32tW3fV0dO\n8m7gU1X1Z0luAH5RVZ9Psho4vqpWtwnEb9CbJzgFuAM4Y/qlkBf61ZGlhWi2qyMf6EFHe97B1wPr\nk1wN7AAuB6iqbUnW0/vmYRdwje96aWHw7yZIS8SgRwbSkrKUTkbzgCBJgCMDab8W097sbKMcRwaS\nAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgG\nkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQY\nBpIAw0BSc9i4C1iKktG0UzWadrQ4ODKQBDgyGCs/uTWfODKQBBgGkhrDQBJgGEhqDANJgGEgqTEM\nJAGGgaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhIagwDqU9vfetb\n2bBhQ+/O978PN9883oIGLLWfS/QmeQXwA+BI4Ajg36tqTZITgH8F/gjYAVxeVb9qz1kDfBj4PfCJ\nqrp9htet/bW72O35uwlLuAsWpCRcAPwt8B5gy8c+xrmrVsEDD8CDD8LWrbB5Mxx99JgrnVnv9y5U\n1Yx/uWO/YdB7gRxdVb9NchjwI+BTwCXAz6vqhiTXAq+qqtVJVgDfAN4GnALcAZxVVbunvaZhgGGw\noNx9Nxvf8Q7eu6/HEzjjDPjud+H1rx9lZX2bLQxm3U2oqt+2xSOAQ4Fn6IXB2rZ+LXBZW74UWFdV\nL1TVDuBxYOXBFi+N3aZNsGoVzBQEb3oTfPnLcM898Oyz8Oij8zYI+jHrH1FJcgjwY+D1wJeq6uEk\ny6pqsm0yCSxryycD90x5+k56IwRp4amCo46Cj38cLruM/9u2jR+tW8eqc86BnTt7t5Ur4c1vHnel\nAzFrGLQh/rlJ/gC4Lcl7pj1eSfY34HUwrIUpgXPO6d2AVwKrbrzxpcer4Pnnx1PbEPT959Wq6tdJ\nvg28BZhMcmJVPZXkJODpttmTwGlTnnZqW7eXiYmJF5c7nQ6dTufAKpfGLYEjjxx3FfvV7Xbpdrt9\nbTvbtwmvAXZV1a+SHAXcBnwWeB/wi6r6fJLVwPHTJhBX8tIE4hnTZwudQOz9u4S7QGMw2wTibCOD\nk4C1bd7gEODmqrozyWZgfZKraV8tAlTVtiTrgW3ALuCaJf2ulxaQWb9aHEqjSTmV4MhAozXnrxYl\nLQ19TyAOmp+K0vziyEASYBhIagwDSYBhIKkxDCQBhoGkxjCQBIzxOAONT2Y8/my4PK5k/nNkIAlw\nZLCkjeLTehyjEB0cRwaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1h\nIAkwDCQ1hoEkwDCQ1BgGkgDDQFLjZc+WMC9JpqkcGUgCHBksSV62XDNxZCAJMAwkNYaBJMAwkNQY\nBpIAw0BSYxhIAgwDSY1hIAkwDCQ1Ho6sJcGTsmbnyEAS4MhAS8xSPklrttGRIwNJgGEgqTEMJAGG\ngaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0AS0EcYJDktyV1JHk7yUJJP\ntPUnJNmY5NEktyc5fspz1iR5LMn2JBcO8z8gaTBSs1ztIcmJwIlVtSXJscB/AZcBHwJ+XlU3JLkW\neFVVrU6yAvgG8DbgFOAO4Kyq2j3lNWu2dqVB2nNhj6X8a9frg1BVM17mZNaRQVU9VVVb2vJzwCP0\n3uSXAGvbZmvpBQTApcC6qnqhqnYAjwMr5/B/kDQCBzRnkOR04DzgXmBZVU22hyaBZW35ZGDnlKft\npBcekuaxvq+B2HYRvgl8sqqezZQLqlVVJdnfAGyvxyYmJl5c7nQ6dDqdfkuR1Kdut0u32+1r21nn\nDACSHA78B/DdqrqxrdsOdKrqqSQnAXdV1dlJVgNU1fVtu+8B11XVvVNezzkDjZRzBgOYM0hvCPBV\nYNueIGg2AFe15auAW6asvzLJEUmWA2cC9x1c+ZJGpZ9vEy4A/hN4kJeG+2vovcHXA38I7AAur6pf\nted8BvgwsIvebsVt017TkYFGypHB7CODvnYTBs0w0KgZBgPYTZC0NBgGkgDDQFJjGEgCDANJjX+F\nWfPGbH8lWMPlyEDq00c+8hGOOeaYcZcxNI4MNG/M92MADj/8cH7zm9+Mu4yh8aAjaYnwoCNJfTEM\nJAGGgaTGMJAEGAaSGsNAEmAYSGoMA0mAYSCpMQwkAYaBpMYwkAQYBpIaw0ASYBhIagwDSYBhIKkx\nDCQBhoGkxjCQpnniiSfYtGnTuMsYOcNAmmb58uUceeSR7N69e9yljJRXR5aWCK+OLKkvhoEkwDCQ\n1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUHDauhjPj0dELl6daaKFzZCAJGOPIwE9SaX5x\nZCAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkY4xGI0igN8lyYxXr0rCMDSYAjAy0xc/lU\nX2xn2k7nyEASYBhIagwDSYBhIKmZNQySfC3JZJKtU9adkGRjkkeT3J7k+CmPrUnyWJLtSS4cVuGS\nBqufkcE/AhdNW7ca2FhVZwF3tvskWQFcAaxoz7kpiaMPaQGY9Y1aVT8Enpm2+hJgbVteC1zWli8F\n1lXVC1W1A3gcWDmYUiUN08F+ai+rqsm2PAksa8snAzunbLcTOOUg25A0QnM+6KiqKsn+DuWY8bGJ\niYkXlzudDp1OZ66lSJqm2+3S7Xb72jbVxyFZSU4Hbq2qN7b724FOVT2V5CTgrqo6O8lqgKq6vm33\nPeC6qrp32utVP+1Kg7Ln6MFBHIG4UH91e/WHqprxWMqD3U3YAFzVlq8Cbpmy/sokRyRZDpwJ3HeQ\nbUgaoVl3E5KsA94NvCbJT4G/Aa4H1ie5GtgBXA5QVduSrAe2AbuAaxwCSAtDX7sJA2/U3YR5Y9gn\n38yXH7O7CbPvJnjWopaUxX7m4VwYBgIW7qedBscw0JIwzLDbsGEDzz//PB/4wAeG18gIGAbSHJ13\n3nkcd9xx4y5jzpxAXOIW+qSY+jes4wwkLTKGgSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaB\nJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1hoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWG\ngSTAMJDUGAaSAMNAUmMYSAIMA0mNYSAJMAwkNYaBJMAwkNQYBpIAw0BSYxhIAgwDSY1hIAkwDCQ1\nhoEkwDCQ1BgGkgDDQFJjGEgCDANJjWEgCTAMJDWGgSTAMJDUGAaSAMNAUmMYSAIMA0nNUMIgyUVJ\ntid5LMm1w2hD0mANPAySHAr8A3ARsAL4YJI3DLqdQel2u+Mu4UXWMjNr2dsw6hjGyGAl8HhV7aiq\nF4B/AS4dQjsDMV9+uGAt+2Ite1soYXAK8NMp93e2dZLmscOG8JrVz0bJEFo+SJ/97LgreMm4apnp\n52G/zGy+1DLoOlLV13u3/xdMzgcmquqidn8NsLuqPj9lm8E2KqlvVTXjR/EwwuAw4L+BPwH+B7gP\n+GBVPTLQhiQN1MB3E6pqV5KPA7cBhwJfNQik+W/gIwNJC9PIj0Ac5wFJSXYkeTDJ5iT3tXUnJNmY\n5NEktyc5fkhtfy3JZJKtU9bts+0ka1ofbU9y4QhqmUiys/XN5iQXj6iW05LcleThJA8l+URbP/K+\n2U8tI++bJK9Icm+SLUm2Jfm7tn54/VJVI7vR2214HDgdOBzYArxhhO0/AZwwbd0NwF+35WuB64fU\n9ruA84Cts7VN72CtLa2PTm99dsiQa7kO+KsZth12LScC57blY+nNN71hHH2zn1rG1TdHt38PA+4B\nLhhmv4x6ZDAfDkiaPpN6CbC2La8FLhtGo1X1Q+CZPtu+FFhXVS9U1Q56P9iVQ64F9u6bUdTyVFVt\nacvPAY/QOy5l5H2zn1pgPH3z27Z4BL0P0mcYYr+MOgzGfUBSAXckuT/JR9u6ZVU12ZYngWUjrGdf\nbZ9Mr2/2GFU//WWSB5J8dcrwc2S1JDmd3ojlXsbcN1NquaetGnnfJDkkyRZ6//+7quphhtgvow6D\ncc9WvrOqzgMuBv4iybumPli98dZYauyj7WHX9SVgOXAu8DPgC6OsJcmxwDeBT1bVsy9rbMR902r5\nt1bLc4ypb6pqd1WdC5wK/HGS90x7fKD9MuoweBI4bcr903h5mg1VVf2s/fu/wLfoDaMmk5wIkOQk\n4OlR1bOftqf306lt3dBU1dPVAF/hpSHm0GtJcji9ILi5qm5pq8fSN1Nq+ec9tYyzb1r7vwa+DbyF\nIfbLqMPgfuDMJKcnOQK4AtgwioaTHJ3kuLZ8DHAhsLW1f1Xb7CrglplfYSj21fYG4MokRyRZDpxJ\n7+CtoWm/WHv8Ob2+GXotSQJ8FdhWVTdOeWjkfbOvWsbRN0les2d3JMlRwHuBzQyzXwY183kAM6QX\n05ulfRxYM8J2l9Obbd0CPLSnbeAE4A7gUeB24Pghtb+O3hGZz9ObN/nQ/toGPtP6aDvwviHX8mHg\nn4AHgQfaL9iyEdVyAbC7/Vw2t9tF4+ibfdRy8Tj6Bngj8ONWy4PAp2f7fZ1rLR50JAnwsmeSGsNA\nEmAYSGoMA0mAYSCpMQwkAYaBpMYwkATA/wMq9+ls0eHPEQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10c515750>"
+       "<matplotlib.figure.Figure at 0x10e6237d0>"
       ]
      },
      "metadata": {},
@@ -116,20 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 136,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "reload(state.particle_filtering)\n",
-    "particles = state.particle_filtering.Particles(n=1000, where='1base')\n",
-    "robot = state.particle_filtering.Robot(20, 30, 0)"
+    "particles = state.particle_filtering.Particles(n=25000, where=None)\n",
+    "robot = state.particle_filtering.Robot(X_MAX-20, Y_MAX-30, pi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -140,7 +141,7 @@
     "    factor = 6\n",
     "    robot.rotate(pi/factor)\n",
     "    particles.rotate(pi/factor)\n",
-    "    particles.sense(robot.measurement_prediction())\n",
+    "    particles.sense(Parti\n",
     "    distance = 20.0\n",
     "    robot.forward(distance)\n",
     "    particles.forward(distance)\n",
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -180,13 +181,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[66 72]\n",
-      " [67 72]\n",
-      " [67 72]\n",
+      "[[253 303]\n",
+      " [253 304]\n",
+      " [252 303]\n",
       " ..., \n",
-      " [67 72]\n",
-      " [67 74]\n",
-      " [66 74]]\n"
+      " [253 305]\n",
+      " [251 305]\n",
+      " [253 304]]\n"
      ]
     }
    ],
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -442,7 +443,7 @@
        "<module 'state.particle_filtering' from 'state/particle_filtering.py'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -515,21 +516,63 @@
     {
      "data": {
       "text/plain": [
-       "1331200"
+       "<module 'state.particle_filtering' from 'state/particle_filtering.py'>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raycasting_distances.nbytes"
+    "reload(state.particle_filtering)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 198,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n=100000\n",
+    "distance = 60\n",
+    "measurements = state.particle_filtering.Particles.model_beam(distance, n)\n",
+    "predictions = np.multiply(np.ones(n), distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4.439527735517677,\n",
+       " 0.8762299166005523,\n",
+       " 0.1627523918439058,\n",
+       " 0.0,\n",
+       " 4.6106386306947851,\n",
+       " 0.019109244139915656]"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state.particle_filtering.Particles.learn_intrinsic_parameters(measurements, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
    "metadata": {
     "collapsed": false
    },
@@ -537,16 +580,16 @@
     {
      "data": {
       "text/plain": [
-       "1331200"
+       "4.9914872322996144"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(320/8)*(520/8)*256*2"
+    "np.std(measurements)"
    ]
   }
  ],
